Week 2/Day4/ChatGPT/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/chatgpt-default: "true"
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: OPENAI_API_KEY
              value: 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
            - name: spring.datasource.url
              value: jdbc:mysql://database:3306/employee_management_system?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true
          image: jabenjam/chatgpt-api
          name: api
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
