Week 2/Day4/ChatGPT/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/chatgpt-default: "true"
        io.kompose.service: database
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: chatgpt
            - name: MYSQL_PASSWORD
              value: chatgpt
            - name: MYSQL_ROOT_PASSWORD
              value: chatgpt
            - name: MYSQL_ROOT_USER
              value: root
            - name: MYSQL_USER
              value: chatgpt
          image: mysql:latest
          name: database
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: database-claim0
      restartPolicy: Always
      volumes:
        - name: database-claim0
          persistentVolumeClaim:
            claimName: database-claim0
status: {}
