Week 2/Day4/ChatGPT/chatgpt-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: chatgpt-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/chatgpt-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/chatgpt-default: "true"
